# coap-pp

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/coap_pp_serde_nanopb/: NanopbGenerate.cmake  protoc-gen-coap_pp_fields.py
examples/: CMakeLists.txt  hello_world.cpp  hello_world.options  hello_world_client.py  hello_world_pb2.py
examples/blockwise/: CMakeLists.txt  blockwise.cpp  blockwise_client.py
examples/raw/: CMakeLists.txt  raw.cpp  raw_client.py
examples/serde_json/: CMakeLists.txt  serde_json.cpp  serde_json_client.py
examples/serde_nanopb/: CMakeLists.txt  serde_nanopb.cpp  serde_nanopb.proto  serde_nanopb_client.py  serde_nanopb_pb2.py
include/coap_pp/: content_formats.hpp  log.hpp  option_number.hpp  panic.hpp
include/coap_pp/messaging/: messenger.hpp
include/coap_pp/pdu/: block.hpp  builder.hpp  deserialize.hpp  message.hpp  option.hpp  option_list.hpp  serialize.hpp
include/coap_pp/serde/: deserialize.hpp  serialize.hpp
include/coap_pp/server/: blockwise.hpp  coap_server.hpp  observable.hpp  resource.hpp  router.hpp  router_base.hpp
include/coap_pp/transport/: endpoint.hpp  transport_if.hpp
include/coap_pp/util/: function.hpp  inplace_function.hpp  intrusive_list.hpp  memory_pool.hpp  net_buffer.hpp  overloaded.hpp  ring_buffer.hpp  sort.hpp  span.hpp  static_vector.hpp  type_traits.hpp
include/coap_pp_serde_json/: deserializer.hpp  router.hpp  serializer.hpp
include/coap_pp_serde_nanopb/: deserializer.hpp  fields.hpp  nanopb_deserialize.hpp  router.hpp  serializer.hpp
include/coap_pp_transport_posix/: udp_transport.hpp
include/coap_pp_transport_udp_ip_slip/: serial_port_if.hpp  udp_ip_slip_transport.hpp
src/coap_pp/: log.cpp  panic.cpp
src/coap_pp/messaging/: messenger.cpp
src/coap_pp/pdu/: deserialize.cpp  option_field.hpp  serialize.cpp  wire.hpp
src/coap_pp/server/: blockwise.cpp  coap_server.cpp  observable.cpp  resource.cpp
src/coap_pp_serde_json/: CMakeLists.txt
src/coap_pp_serde_nanopb/: CMakeLists.txt
src/coap_pp_transport_posix/: CMakeLists.txt  udp_transport.cpp
src/coap_pp_transport_udp_ip_slip/: CMakeLists.txt  udp_ip_slip_transport.cpp
tests/: CMakeLists.txt  test_messenger.cpp  test_pdu.cpp  test_serialize.cpp  test_server.cpp  test_transport_interface.cpp
tests/coap_pp/: CMakeLists.txt
tests/coap_pp/messaging/: test_messenger.cpp
tests/coap_pp/pdu/: test_block.cpp  test_pdu.cpp  test_serialize.cpp
tests/coap_pp/server/: test_blockwise.cpp  test_observe.cpp  test_server.cpp
tests/coap_pp/transport/: test_endpoint.cpp
tests/coap_pp/util/: test_inplace_function.cpp  test_intrusive_list.cpp  test_memory_pool.cpp  test_panic.cpp  test_ring_buffer.cpp
tests/coap_pp_serde_json/: CMakeLists.txt  test_json_router.cpp
tests/coap_pp_serde_nanopb/: CMakeLists.txt  serde_test.options  serde_test.proto  test_nanopb_router.cpp
tests/fakes/: CMakeLists.txt  fake_transport.hpp
tests/python/: requirements.txt  test_hello_world.py
